# stock-analysis-bot

./: .env.example  .gitattributes  .gitignore  Daily.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_daily.py
.github/workflows/: daily.yml  tests.yml
api/: server.py
data/: portfolio.example.json
data/fixtures/: market_data.example.json
docs/: app.js  index.html  manifest.json
docs/data/: 2026-07-22.json  2026-07-22.md  stockbot.db
src/stockbot/: __init__.py  config.py  logging_setup.py  models.py  pipeline.py
src/stockbot/decision/: __init__.py  confidence.py  engine.py  risk.py
src/stockbot/explain/: explainer.py
src/stockbot/ingestion/: __init__.py  market_data.py  portfolio.py
src/stockbot/llm/: __init__.py  fireworks.py
src/stockbot/news/: __init__.py  fetch.py  sentiment.py
src/stockbot/output/: __init__.py  push.py  report.py
src/stockbot/storage/: db.py
src/stockbot/valuation/: __init__.py  dcf.py
tests/: conftest.py  test_confidence.py  test_dcf.py  test_decision.py  test_encrypt.py  test_llm_boundary.py  test_pipeline.py  test_publish.py  test_risk.py
tools/: encrypt_report.py  gen_vapid.py  make_icons.py  publish.py
web/: _headers  app.js  index.html  manifest.json  styles.css  sw.js
