[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockbot"
version = "0.1.0"
description = "Personal daily portfolio and stock analysis bot. Not investment advice."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pywebpush>=2.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
